# major-agent

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  clear_db.py  main.py  pyproject.toml  requirements.txt
backend/api/: __init__.py  assessment_api.py  auth.py  reports.py  sessions.py
backend/config/: database.py  llm.py
backend/core/: __init__.py  config.py  dependencies.py  security.py
backend/models/: __init__.py  assessment_models.py  report.py  session.py  user.py
backend/services/: __init__.py  assessment_service.py  report_service.py  storage.py  xpay_service.py
backend/workflow/: __init__.py  final_agent.py  graph.py  pdf_generator.py  questions.py  state.py
frontend/: .env.production  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: index.ts
frontend/src/assets/: main.css
frontend/src/stores/: auth.ts  session.ts
frontend/src/utils/: message.ts
frontend/src/views/: Assessment.vue  Home.vue  Report.vue  ReportLoading.vue  ReportUnlock.vue
manual-unlock/: index.html
