[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "duckduckgo-search>=4.0.0",
]
